# janus-ftl-plugin

./: .dockerignore  .gitignore  .gitmodules  AudioCodec.h  Configuration.cpp  Configuration.h  CredStore.h  Dockerfile  DummyCredStore.cpp  DummyCredStore.h  DummyServiceConnection.cpp  DummyServiceConnection.h  FtlRtp.h  FtlStream.cpp  FtlStream.h  FtlStreamStore.cpp  FtlStreamStore.h  GlimeshServiceConnection.cpp  GlimeshServiceConnection.h  H264PreviewGenerator.cpp  H264PreviewGenerator.h  IngestConnection.cpp  IngestConnection.h  IngestServer.cpp  IngestServer.h  JanssonPtr.h  JanusFtl.cpp  JanusFtl.h  JanusSession.cpp  JanusSession.h  Keyframe.h  LICENSE  LibAvCodecPtr.h  Makefile  PreviewGenerator.h  README.md  RelayThreadPool.cpp  RelayThreadPool.h  RtpRelayPacket.h  ServiceConnection.h  (+6 more)
.github/workflows/: build.yml
docs/: REST_SERVICE.md
pch/: janus_ftl_pch.h  janus_ftl_test_pch.h
src/: AudioCodec.h  Configuration.cpp  Configuration.h  DummyServiceConnection.cpp  EdgeNodeServiceConnection.cpp  EdgeNodeServiceConnection.h  FtlClient.cpp  FtlClient.h  FtlControlConnection.cpp  FtlControlConnection.h  FtlControlConnectionManager.h  FtlExceptions.h  FtlIngestControlConnection.cpp  FtlIngestControlConnection.h  FtlMediaConnection.cpp  FtlMediaConnection.h  FtlServer.cpp  FtlServer.h  FtlStream.cpp  FtlStream.h  FtlStreamStore.cpp  FtlStreamStore.h  FtlTypes.h  H264PreviewGenerator.h  IngestConnection.cpp  IngestConnection.h  IngestServer.cpp  IngestServer.h  JanusFtl.cpp  JanusFtl.h  JanusSession.cpp  JanusSession.h  JanusStream.cpp  JanusStream.h  RelayThreadPool.cpp  RelayThreadPool.h  Result.h  RtpPacketSink.h  Util.h  entrypoint.cpp  (+2 more)
src/ConnectionCreators/: ConnectionCreator.h  UdpConnectionCreator.cpp  UdpConnectionCreator.h
src/ConnectionListeners/: ConnectionListener.h  TcpConnectionListener.cpp  TcpConnectionListener.h
src/ConnectionTransports/: ConnectionTransport.h  NetworkSocketConnectionTransport.cpp  NetworkSocketConnectionTransport.h  TcpSocketConnectionTransport.cpp  TcpSocketConnectionTransport.h  UdpConnectionTransport.cpp  UdpConnectionTransport.h
src/PreviewGenerators/: H264PreviewGenerator.cpp  H264PreviewGenerator.h  PreviewGenerator.h
src/Rtp/: ExtendedSequenceCounter.cpp  ExtendedSequenceCounter.h  JanusRtpPacketBuilder.cpp  JanusRtpPacketBuilder.h  RtpPacket.cpp  RtpPacket.h  SequenceTracker.cpp  SequenceTracker.h  Types.h
src/ServiceConnections/: DummyServiceConnection.cpp  DummyServiceConnection.h  EdgeNodeServiceConnection.cpp  EdgeNodeServiceConnection.h  GlimeshServiceConnection.cpp  GlimeshServiceConnection.h  RestServiceConnection.cpp  RestServiceConnection.h  ServiceConnection.h  Util.h
src/Utilities/: FtlTypes.h  JanssonPtr.h  LibAvCodecPtr.h  Result.h  Rtp.cpp  Rtp.h  Util.h  Watchdog.cpp  Watchdog.h
src/VideoDecoders/: H264VideoDecoder.cpp  H264VideoDecoder.h  VideoDecoder.h
subprojects/: catch2.wrap  fmt.wrap  spdlog.wrap
test/: JanusFtlTest.cpp  JanusMocks.h  Makefile  README.md  meson.build  test.cpp
test/functional/: FunctionalTests.cpp  meson.build
test/functional/Utilities/: JanusShims.cpp
test/mocks/: MockConnectionTransport.h  MockFtlControlConnectionManager.h
test/unit/: FtlControlConnectionUnitTests.cpp  meson.build
test/unit/ConnectionTransports/: NetworkSocketConnectionTransportTests.cpp
test/unit/ConnnectionTransports/: NetworkSocketConnectionTransportTest.cpp  meson.build
test/unit/Rtp/: ExtendedSequenceCounterTest.cpp  ExtendedSequenceCounterTests.cpp  SequenceTrackerTests.cpp  meson.build
test/unit/Utilities/: UtilTest.cpp  meson.build
